@@ -3,12 +3,270 @@
 
 /**
  * This file contains misc functions for FlightPath
- */
+*/
 
  
- /**
-  * Call all modules which implement hook_clear_cache
-  */
+ 
+ 
+/**
+ * Send a request through the Internet and return the result as an object.
+ * 
+ * This is a copy of the Drupal 6 function drupal_http_request(),
+ * taken from here: http://api.drupal.org/api/drupal/includes!common.inc/function/drupal_http_request/6
+ */
+function fp_http_request($url, $headers = array(), $method = 'GET', $data = NULL, $retry = 3, $timeout = 30.0) {
+  global $db_prefix;
+
+  $result = new stdClass();
+
+  // Parse the URL and make sure we can handle the schema.
+  $uri = parse_url($url);
+
+  if ($uri == FALSE) {
+    $result->error = 'unable to parse URL';
+    $result->code = -1001;
+    return $result;
+  }
+
+  if (!isset($uri['scheme'])) {
+    $result->error = 'missing schema';
+    $result->code = -1002;
+    return $result;
+  }
+
+  timer_start(__FUNCTION__);
+
+  switch ($uri['scheme']) {
+    case 'http':
+    case 'feed':
+      $port = isset($uri['port']) ? $uri['port'] : 80;
+      $host = $uri['host'] . ($port != 80 ? ':' . $port : '');
+      $fp = @fsockopen($uri['host'], $port, $errno, $errstr, $timeout);
+      break;
+    case 'https':
+      // Note: Only works for PHP 4.3 compiled with OpenSSL.
+      $port = isset($uri['port']) ? $uri['port'] : 443;
+      $host = $uri['host'] . ($port != 443 ? ':' . $port : '');
+      $fp = @fsockopen('ssl://' . $uri['host'], $port, $errno, $errstr, $timeout);
+      break;
+    default:
+      $result->error = 'invalid schema ' . $uri['scheme'];
+      $result->code = -1003;
+      return $result;
+  }
+
+  // Make sure the socket opened properly.
+  if (!$fp) {
+    // When a network error occurs, we use a negative number so it does not
+    // clash with the HTTP status codes.
+    $result->code = -$errno;
+    $result->error = trim($errstr);
+
+    // Log that this failed.
+    watchdog("http_request", "fp_http_request failed! Perhaps the server cannot make requests?", array(), WATCHDOG_ERROR);
+
+    return $result;
+  }
+
+  // Construct the path to act on.
+  $path = isset($uri['path']) ? $uri['path'] : '/';
+  if (isset($uri['query'])) {
+    $path .= '?' . $uri['query'];
+  }
+
+  // Create HTTP request.
+  $defaults = array(
+    // RFC 2616: "non-standard ports MUST, default ports MAY be included".
+    // We don't add the port to prevent from breaking rewrite rules checking the
+    // host that do not take into account the port number.
+    'Host' => "Host: $host", 
+    'User-Agent' => 'User-Agent: FlightPath (+http://getflightpath.com/)',
+  );
+
+  // Only add Content-Length if we actually have any content or if it is a POST
+  // or PUT request. Some non-standard servers get confused by Content-Length in
+  // at least HEAD/GET requests, and Squid always requires Content-Length in
+  // POST/PUT requests.
+  $content_length = strlen($data);
+  if ($content_length > 0 || $method == 'POST' || $method == 'PUT') {
+    $defaults['Content-Length'] = 'Content-Length: ' . $content_length;
+  }
+
+  // If the server url has a user then attempt to use basic authentication
+  if (isset($uri['user'])) {
+    $defaults['Authorization'] = 'Authorization: Basic ' . base64_encode($uri['user'] . (!empty($uri['pass']) ? ":" . $uri['pass'] : ''));
+  }
+
+  foreach ($headers as $header => $value) {
+    $defaults[$header] = $header . ': ' . $value;
+  }
+
+  $request = $method . ' ' . $path . " HTTP/1.0\r\n";
+  $request .= implode("\r\n", $defaults);
+  $request .= "\r\n\r\n";
+  $request .= $data;
+
+  $result->request = $request;
+
+  // Calculate how much time is left of the original timeout value.
+  $time_left = $timeout - timer_read(__FUNCTION__) / 1000;
+  if ($time_left > 0) {
+    stream_set_timeout($fp, floor($time_left), floor(1000000 * fmod($time_left, 1)));
+    fwrite($fp, $request);
+  }
+
+  // Fetch response.
+  $response = '';
+  while (!feof($fp)) {
+    // Calculate how much time is left of the original timeout value.
+    $time_left = $timeout - timer_read(__FUNCTION__) / 1000;
+    if ($time_left <= 0) {
+      $result->code = HTTP_REQUEST_TIMEOUT;
+      $result->error = 'request timed out';
+      return $result;
+    }
+    stream_set_timeout($fp, floor($time_left), floor(1000000 * fmod($time_left, 1)));
+    $chunk = fread($fp, 1024);
+    $response .= $chunk;
+  }
+  fclose($fp);
+
+  // Parse response headers from the response body.
+  // Be tolerant of malformed HTTP responses that separate header and body with
+  // \n\n or \r\r instead of \r\n\r\n.  See http://drupal.org/node/183435
+  list($split, $result->data) = preg_split("/\r\n\r\n|\n\n|\r\r/", $response, 2);
+  $split = preg_split("/\r\n|\n|\r/", $split);
+
+  list($protocol, $code, $status_message) = explode(' ', trim(array_shift($split)), 3);
+  $result->protocol = $protocol;
+  $result->status_message = $status_message;
+
+  $result->headers = array();
+
+  // Parse headers.
+  while ($line = trim(array_shift($split))) {
+    list($header, $value) = explode(':', $line, 2);
+    if (isset($result->headers[$header]) && $header == 'Set-Cookie') {
+      // RFC 2109: the Set-Cookie response header comprises the token Set-
+      // Cookie:, followed by a comma-separated list of one or more cookies.
+      $result->headers[$header] .= ',' . trim($value);
+    }
+    else {
+      $result->headers[$header] = trim($value);
+    }
+  }
+
+  $responses = array(
+    100 => 'Continue', 
+    101 => 'Switching Protocols', 
+    200 => 'OK', 
+    201 => 'Created', 
+    202 => 'Accepted', 
+    203 => 'Non-Authoritative Information', 
+    204 => 'No Content', 
+    205 => 'Reset Content', 
+    206 => 'Partial Content', 
+    300 => 'Multiple Choices', 
+    301 => 'Moved Permanently', 
+    302 => 'Found', 
+    303 => 'See Other', 
+    304 => 'Not Modified', 
+    305 => 'Use Proxy', 
+    307 => 'Temporary Redirect', 
+    400 => 'Bad Request', 
+    401 => 'Unauthorized', 
+    402 => 'Payment Required', 
+    403 => 'Forbidden', 
+    404 => 'Not Found', 
+    405 => 'Method Not Allowed', 
+    406 => 'Not Acceptable', 
+    407 => 'Proxy Authentication Required', 
+    408 => 'Request Time-out', 
+    409 => 'Conflict', 
+    410 => 'Gone', 
+    411 => 'Length Required', 
+    412 => 'Precondition Failed', 
+    413 => 'Request Entity Too Large', 
+    414 => 'Request-URI Too Large', 
+    415 => 'Unsupported Media Type', 
+    416 => 'Requested range not satisfiable', 
+    417 => 'Expectation Failed', 
+    500 => 'Internal Server Error', 
+    501 => 'Not Implemented', 
+    502 => 'Bad Gateway', 
+    503 => 'Service Unavailable', 
+    504 => 'Gateway Time-out', 
+    505 => 'HTTP Version not supported',
+  );
+  // RFC 2616 states that all unknown HTTP codes must be treated the same as the
+  // base code in their class.
+  if (!isset($responses[$code])) {
+    $code = floor($code / 100) * 100;
+  }
+
+  switch ($code) {
+    case 200: // OK
+    case 304: // Not modified
+      break;
+    case 301: // Moved permanently
+    case 302: // Moved temporarily
+    case 307: // Moved temporarily
+      $location = $result->headers['Location'];
+      $timeout -= timer_read(__FUNCTION__) / 1000;
+      if ($timeout <= 0) {
+        $result->code = HTTP_REQUEST_TIMEOUT;
+        $result->error = 'request timed out';
+      }
+      elseif ($retry) {
+        $result = drupal_http_request($result->headers['Location'], $headers, $method, $data, --$retry, $timeout);
+        $result->redirect_code = $result->code;
+      }
+      $result->redirect_url = $location;
+
+      break;
+    default:
+      $result->error = $status_message;
+  }
+
+  $result->code = $code;
+  return $result;
+}
+ 
+
+/**
+ * Begin a microtime timer for later use.
+ */
+function timer_start($name) {
+  global $timers;
+
+  list($usec, $sec) = explode(' ', microtime());
+  $timers[$name]['start'] = (float) $usec + (float) $sec;
+  $timers[$name]['count'] = isset($timers[$name]['count']) ? ++$timers[$name]['count'] : 1;
+}
+
+/**
+ * Works with the timer_read() function to return how long
+ * it has been since the start.
+ */
+function timer_read($name) {
+  global $timers;
+
+  if (isset($timers[$name]['start'])) {
+    list($usec, $sec) = explode(' ', microtime());
+    $stop = (float) $usec + (float) $sec;
+    $diff = round(($stop - $timers[$name]['start']) * 1000, 2);
+
+    if (isset($timers[$name]['time'])) {
+      $diff += $timers[$name]['time'];
+    }
+    return $diff;
+  }
+}
+
+ 
+/**
+ * Call all modules which implement hook_clear_cache
+ */
 function fp_clear_cache() {
   // Find modules which implement hook_clear_cache
   $modules = modules_implement_hook("clear_cache");
